# iot-hub-device-update

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  DartConfiguration.tcl  LICENSE  LICENSE.md  README.md  SUPPORT.md  deviceupdate-agent_0.9.0_Ubuntu1804_amd64.deb  vcpkg.json
daemon/: CMakeLists.txt  adu-agent.service  deviceupdate-agent.service  install.sh
src/: CMakeLists.txt
src/adu-shell/: CMakeLists.txt
src/adu-shell/inc/: adushell.hpp  adushell_action.hpp  adushell_const.hpp  aptget_tasks.h  common_tasks.hpp  pvcontrol_tasks.hpp  script_tasks.hpp  swupdate_tasks.hpp
src/adu-shell/scripts/: CMakeLists.txt  adu-swupdate.sh
src/adu-shell/src/: adushell_action.cpp  aptget_tasks.cpp  common_tasks.cpp  main.cpp  pvcontrol_tasks.cpp  script_tasks.cpp  swupdate_tasks.cpp
src/adu_types/: CMakeLists.txt
src/adu_types/src/: adu_types.c
src/adu_workflow/: CMakeLists.txt
src/adu_workflow/src/: agent_workflow.c
src/agent/: CMakeLists.txt
src/agent/adu_core_export_helpers/: CMakeLists.txt
src/agent/adu_core_interface/: CMakeLists.txt
src/agent/command_helper/: CMakeLists.txt
src/agent/device_info_interface/: CMakeLists.txt
src/agent/pnp_helper/: CMakeLists.txt  readme.md
src/agent/shutdown_service/: CMakeLists.txt
src/agent/src/: agent_worker_threads.cpp  agent_worker_threads.h  health_management.c  main.c  reporting_worker_thread_proc.cpp  update_worker_thread_proc.cpp
src/agent_orchestration/: CMakeLists.txt
src/agent_orchestration/src/: agent_orchestration.c
src/agent_sdk/: CMakeLists.txt
src/communication_abstraction/: CMakeLists.txt
src/communication_abstraction/src/: client_handle_helper.c
src/communication_managers/: CMakeLists.txt
src/communication_managers/iothub_communication_manager/: CMakeLists.txt
src/content_handlers/: CMakeLists.txt
src/content_handlers/apt_handler/: CMakeLists.txt  README.md
src/content_handlers/bundle_update_handler/: CMakeLists.txt  README.md
src/content_handlers/components_update_handler/: CMakeLists.txt  README.md
src/content_handlers/pvcontrol_handler/: CMakeLists.txt
src/content_handlers/script_handler/: CMakeLists.txt  README.md
src/content_handlers/simulator_handler/: CMakeLists.txt  README.md  du-simulator-data-template.jsonc
src/content_handlers/src/: content_handler_factory.cpp
src/content_handlers/steps_handler/: CMakeLists.txt  README.md
src/content_handlers/swupdate_handler/: CMakeLists.txt  README.md
src/content_handlers/swupdate_handler_v2/: CMakeLists.txt
src/diagnostics_component/: CMakeLists.txt
src/diagnostics_component/diagnostics_async_helper/: CMakeLists.txt
src/diagnostics_component/diagnostics_devicename/: CMakeLists.txt
src/diagnostics_component/diagnostics_interface/: CMakeLists.txt
src/diagnostics_component/diagnostics_workflow/: CMakeLists.txt
src/diagnostics_component/utils/: CMakeLists.txt
src/docs/: CMakeLists.txt  Doxyfile.in
src/extensions/: CMakeLists.txt
src/extensions/agent_modules/: CMakeLists.txt
src/extensions/content-downloaders/: CMakeLists.txt
src/extensions/content_downloaders/: CMakeLists.txt
src/extensions/download_handlers/: CMakeLists.txt  README.md
src/extensions/extension_manager/: CMakeLists.txt
src/extensions/shared_lib/: CMakeLists.txt
src/extensions/step_handlers/: CMakeLists.txt
src/extensions/update_manifest_handlers/: CMakeLists.txt
src/inc/aduc/: adu_core_exports.h  aduc_banned.h  aduc_inode.h  device_info_exports.h  result.h
src/libaducpal/: CMakeLists.txt
src/libaducpal/src/: dirent.c  dlfcn.c  ftw.c  grp.c  pwd.c  signal.c  stdio.c  stdlib.c  strings.c  sys_stat.c  sys_statvfs.c  sys_sysinfo.c  sys_time.c  sys_utsname.c  time.c  unistd.c  wait.c
src/logging/: CMakeLists.txt
src/logging/manager/: CMakeLists.txt
src/logging/zlog/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/du-communication/: CMakeLists.txt
src/platform_layers/: CMakeLists.txt
src/platform_layers/linux_platform_layer/: CMakeLists.txt
src/platform_layers/simulator_platform_layer/: CMakeLists.txt
src/platform_layers/windows_platform_layer/: CMakeLists.txt
src/provisioning/: CMakeLists.txt
src/provisioning/src/: device_provisioning_client.c
src/rootkey_workflow/: CMakeLists.txt
src/rootkey_workflow/src/: rootkey_workflow.c
src/rootkey_workflow/tests/: CMakeLists.txt  main.cpp  rootkey_workflow_ut.cpp
src/stores/: CMakeLists.txt
src/stores/rootkey/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/adushell_utils/: CMakeLists.txt
src/utils/c_utils/: CMakeLists.txt
src/utils/config_utils/: CMakeLists.txt
src/utils/content_protection_utils/: CMakeLists.txt
src/utils/contract_utils/: CMakeLists.txt
src/utils/crypto_utils/: CMakeLists.txt
src/utils/d2c_messaging/: CMakeLists.txt
src/utils/download_utils/: CMakeLists.txt
src/utils/eis_utils/: CMakeLists.txt
src/utils/entity_utils/: CMakeLists.txt
src/utils/exception_utils/: CMakeLists.txt
src/utils/extension_utils/: CMakeLists.txt
src/utils/file_utils/: CMakeLists.txt
src/utils/hash_utils/: CMakeLists.txt
src/utils/https_proxy_utils/: CMakeLists.txt
src/utils/installed_criteria_utils/: CMakeLists.txt
src/utils/jws_utils/: CMakeLists.txt
src/utils/parser_utils/: CMakeLists.txt
src/utils/parson_json_utils/: CMakeLists.txt
src/utils/path_utils/: CMakeLists.txt
src/utils/permission_utils/: CMakeLists.txt
src/utils/process_utils/: CMakeLists.txt
src/utils/reporting_utils/: CMakeLists.txt
src/utils/retry_utils/: CMakeLists.txt
src/utils/root_key_utility/: CMakeLists.txt
src/utils/root_key_utils/: CMakeLists.txt
src/utils/rootkeypackage_utils/: CMakeLists.txt
src/utils/string_utils/: CMakeLists.txt
src/utils/system_utils/: CMakeLists.txt
src/utils/test_utils/: CMakeLists.txt
src/utils/trust_utils/: CMakeLists.txt
src/utils/url_utils/: CMakeLists.txt
src/utils/worker_thread/: CMakeLists.txt
src/utils/workflow_data_utils/: CMakeLists.txt
src/utils/workflow_utils/: CMakeLists.txt
(+5132 files in other folders)
